# mumps

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme.md  Readme_LAPACK.md  Readme_Windows.md  Readme_dev.md  Readme_matlab.md  Readme_oneapi.md  Readme_options.md  Readme_ordering.md  Reference.md  VERSION  build.bat  codemeta.json  flake.nix  options.cmake  test.cmake
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci_build.yml  ci_mac.yml  ci_windows.yml  ci_windows.yml.bak  intel-oneapi.yml  oneapi-linux.yml  oneapi-linux.yml.bak  oneapi-windows.yml  oneapi-windows.yml.bak  oneapi_cache_exclude_windows.ps1  oneapi_install_windows.bat  oneapi_run_windows.bat
.github/workflows/composite-build/: action.yml
.github/workflows/composite-cmake/: action.yml
.github/workflows/composite-deps/: action.yml
.github/workflows/composite-example/: action.yml
PORD/: CMakeLists.txt
PORD/lib/: CMakeLists.txt
archive/: FindMUMPS.cmake
cmake/: .cpack_ignore  Config.cmake.in  FindLAPACK.cmake  FindMETIS.cmake  FindMUMPS.cmake  FindOctave.cmake  FindSCALAPACK.cmake  FindSCOTCH.cmake  FindScotch.cmake  GitSubmodule.cmake  PatchFile.cmake  compilers.cmake  config.cmake.in  gemmt.cmake  get_mumps.cmake  install.cmake  lapack.cmake  launcher.cmake  libraries.cmake  libraries.json  libraries.txt  libseq.cmake  matlab.cmake  mpi.cmake  mpi_launcher.cmake  mumps.cmake  mumps.json  mumps_io.540.patch  mumps_io.c.patch  mumps_patch.cmake  mumps_sources.json  mumps_src.cmake  options.cmake  pord.cmake  scalapack.cmake  scotch.cmake  summary.cmake
cmake/Modules/: FindBLACS.cmake  FindLAPACK.cmake  FindMETIS.cmake  FindMPI.cmake  FindMUMPS.cmake  FindSCALAPACK.cmake  FindScotch.cmake  JsonParse.cmake
cmake/abi_check/: CMakeLists.txt  Readme.md  abi_check.h  addone.c  addone.f90  addtwo.c  main.c  main.f90
example/: CMakeLists.txt  CMakePresets.json  README  c_example.c  c_example_save_restore.c  csimpletest.F  csimpletest_save_restore.F  d_example.c  d_example.cpp  dsimpletest.F  dsimpletest_save_restore.F  input_simpletest_cmplx  input_simpletest_real  multiple_arithmetics_example.F  run_ex.cmake  ssimpletest.F  ssimpletest_save_restore.F  z_example.c  zsimpletest.F  zsimpletest_save_restore.F
example/gpu/: CMakeLists.txt  mumps_cuda_gpu_example.f90
example/metis/: CMakeLists.txt  d_metis.f90
example/openmp/: CMakeLists.txt  mumps_openmp_example.f90
example/other_project/: CMakeLists.txt
example/parmetis/: CMakeLists.txt  CMakePresets.json  d_metis.f90
example/scotch/: CMakeLists.txt  d_scotch.f90
examples/: CMakeLists.cmake  CMakeLists.txt  c_example.c  c_example_save_restore.c  csimpletest.F  csimpletest_save_restore.F  dsimpletest.F  dsimpletest_save_restore.F  multiple_arithmetics_example.F  run_ex.cmake  ssimpletest.F  ssimpletest_save_restore.F  zsimpletest.F  zsimpletest_save_restore.F
include/: mumps_int_def.h.in
libseq/: CMakeLists.txt
matlab/: CMakeLists.txt  example.m
scripts/: CMakeLists.txt  DownloadMUMPSsource.cmake  ExampleBuild.cmake  GetTempdir.cmake  ProjectBuild.cmake  build_metis.cmake  build_scalapack.cmake  build_scotch.cmake  compare_mumps_version_source.cmake  diff_print.py  mkdtemp.cmake  oneapi.ps1  oneapi_check.cmake  run_cmake.cmake  tempdir.cmake  test_mumps_versions.cmake  test_oneapi.cmake  test_shared.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  d_simple.f90  print_mumps_options.f90  s_simple.f90  simple.c  test_mumps.f90
tests/: CMakeLists.txt  assert.f90  d_simple.f90  s_simple.f90  test_mumps.f90
