add_library(pord)

target_include_directories(
  pord
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include
  INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
            $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)

set_target_properties(
  pord
  PROPERTIES EXPORT_NAME PORD
             LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
             ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

install(
  TARGETS pord
  EXPORT ${PROJECT_NAME}Targets
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME}
  INCLUDES
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})

add_subdirectory(lib)

# .h files not needed install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
# DESTINATION include)
